<resources>
    <string name="app_name">ZonalDesk</string>
    <string name="title_activity_nav_activity">nav_activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ZonalDesk</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="call">call</string>
    <string name="signout">signout</string>
    <string name="zonaldesk">ZonalDesk</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>

    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="todo">TODO</string>
    <string name="action_sign_in_short">signin</string>
    <string name="action_login">login</string>
    <string name="Login">Login</string>
    <string name="Number">numberphn</string>
    <string name="OTP">otpsend</string>
    <string name="otp">otphint</string>
    <string name="verify">verify</string>
    <string name="SendOTP">sendotp</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="tag_send">send</string>
    <string name="tag_verify">verify</string>
    <string name="will_be_updated_soon">Will Be Updated Soon</string>
    <string name="press_again_exit_app">Press again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="call_history">Call History Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Home its Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="service_status">Service Status Here</string>
    <string name="estimate_service">Service Estimation Here</string>
    <string name="chat_with_zonaldesk">Chat With Zonaldesk Here</string>
    <string name="service_request">Service Request Here</string>

</resources>
